results/SpecGenBench/conversational/log-CanConstruct-2023_06_20_21_11_00.txt
class CanConstruct {
    //@ requires ransomNote != null && magazine != null;
    //@ ensures \result == (ransomNote.length() <= magazine.length() && (\forall int i; 0 <= i && i < 26; count(ransomNote, (char)('a' + i)) <= count(magazine, (char)('a' + i))));
    public boolean canConstruct(String ransomNote, String magazine) {
        if (ransomNote.length() > magazine.length()) {
            return false;
        }
        int[] cnt = new int[26];
        for (char c : magazine.toCharArray()) {
            cnt[c - 'a']++;
        }
        //@ maintaining (\forall int i; 0 <= i && i < j; count(ransomNote.substring(0, j), (char)('a' + i)) <= count(magazine.substring(0, j), (char)('a' + i)));
        //@ decreases ransomNote.length() - j;
        for (int j = 0; j < ransomNote.length(); j++) {
            cnt[ransomNote.charAt(j) - 'a']--;
            if(cnt[ransomNote.charAt(j) - 'a'] < 0) {
                return false;
            }
        }
        return true;
    }

    //@ requires s != null;
    //@ requires 0 <= c && c < 256;
    //@ ensures \result == count(s, c);
    private /*@ pure @*/ int count(String s, char c) {
        int cnt = 0;
        for (int i = 0; i < s.length(); i++) {
            if (s.charAt(i) == c) {
                cnt++;
            }
        }
        return cnt;
    }
}
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:3: error: An identifier with private visibility may not be used in a ensures clause with public visibility
    //@ ensures \result == (ransomNote.length() <= magazine.length() && (\forall int i; 0 <= i && i < 26; count(ransomNote, (char)('a' + i)) <= count(magazine, (char)('a' + i))));
                                                                                                          ^
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:3: error: An identifier with private visibility may not be used in a ensures clause with public visibility
    //@ ensures \result == (ransomNote.length() <= magazine.length() && (\forall int i; 0 <= i && i < 26; count(ransomNote, (char)('a' + i)) <= count(magazine, (char)('a' + i))));
                                                                                                                                                ^
2 errors

